add register new beacon activity

--- a/TestingEstimote/app/src/main/res/values/strings.xml
+++ b/TestingEstimote/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TestingEstimote</string>
+    <string name="action_register_bacon">Register Bacon !</string>
 </resources>
